--- a/TTV48Schmalkalden/Views/News/Detail.cshtml
+++ b/TTV48Schmalkalden/Views/News/Detail.cshtml
@@ -66,7 +66,7 @@
                             {
                                 <li class="comment">
                                     <div class="avatar icon-overlay icn-link">
-                                        <a href="#"><img src="~/assets/images/placeholder-100px.svg" alt=""></a>
+                                        <a href="#"><img src="~/assets/images/placeholder-100px.svg" alt="Platzhalter für Kommentare" title="Kommentarbild"></a>
                                     </div><!-- /.avatar -->
 
                                     <div class="commentbody">
