--- a/TTV48Schmalkalden/Views/Shared/Footer.cshtml
+++ b/TTV48Schmalkalden/Views/Shared/Footer.cshtml
@@ -4,7 +4,7 @@
 
             <div class="col-lg-4 col-md-6 inner">
                 <h4>Wer sind wir</h4>
-                <a href="#top" class="scroll-to"><img class="logo img-intext" src="~/assets/images/logo-white.svg" alt=""></a>
+                <a href="#top" class="scroll-to"><img class="logo img-intext" src="~/assets/images/logo-white.svg" alt="weißes TTV 48 Schmalkalden Logo mit Tischtennisball und Schläger" title="TTV 48 Schmalkalden"></a>
                 <p>Ein sympathischer regional präsenter Tischtennisverein aus dem Thüringer Wald.</p>
                 <a asp-controller="Home" asp-action="Index" asp-fragment="about" class="txt-btn">Mehr über uns</a>
             </div><!-- /.col -->
