--- a/TTV48Schmalkalden/Views/Shared/Navigation.cshtml
+++ b/TTV48Schmalkalden/Views/Shared/Navigation.cshtml
@@ -12,7 +12,7 @@
                 </ul><!-- /.social -->
                 <!-- ============================================================= LOGO MOBILE ============================================================= -->
 
-                <a class="navbar-brand" asp-controller="Home" asp-action="Index"><img src="~/assets/images/logo.svg" class="logo" alt=""></a>
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index"><img src="~/assets/images/logo.svg" class="logo" alt="Logo des TTV 48 Schmalkalden" title="Logo"></a>
 
                 <!-- ============================================================= LOGO MOBILE : END ============================================================= -->
 
@@ -27,7 +27,7 @@
 
                     <!-- ============================================================= LOGO ============================================================= -->
 
-                    <a class="navbar-brand scroll-to" asp-controller="Home" asp-action="Index"><img src="~/assets/images/logo.svg" class="logo" alt=""></a>
+                    <a class="navbar-brand scroll-to" asp-controller="Home" asp-action="Index"><img src="~/assets/images/logo.svg" class="logo" alt="Logo des TTV 48 Schmalkalden" title="Logo"></a>
 
                     <!-- ============================================================= LOGO : END ============================================================= -->
                     <!-- ============================================================= MAIN NAVIGATION ============================================================= -->
