--- a/TTV48Schmalkalden/Views/Home/Index.cshtml
+++ b/TTV48Schmalkalden/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
                 <div class="col-lg-4 inner-right-xs inner-bottom-xs">
                     <h3>Freude am Tischtennis</h3>
                     <p>
-                        Haben Sie Freude am Tischtennis und suchen eine Möglichkeit aktiv spielen zu können?
+                        Haben Sie Fans der Ballsportart und suchen eine Möglichkeit aktiv spielen zu können?
                         Informieren Sie sich über unsere Trainingszeiten.
                     </p>
                     <a href="#training" data-anchor-offset="0" class="btn btn-large scroll-to">Training</a>
@@ -114,7 +114,7 @@
                 </div><!-- /.col -->
 
                 <div class="col-lg-6 inner-left-xs">
-                    <figure><img src="~/assets/images/art/location.png" alt=""></figure>
+                    <figure><img src="~/assets/images/art/location.png" alt="Trainingsort des Schmalkalder Vereins" title="Sporthalle am Walperloh"></figure>
                 </div><!-- /.col -->
 
             </div><!-- /.row -->
@@ -153,7 +153,7 @@
                                                                 <h4 style="hyphens: auto;">@news.Title</h4>
                                                             </div><!-- /.info -->
                                                         </figcaption>
-                                                        <img src="~/assets/images/placeholder-news.svg" alt="">
+                                                        <img src="~/assets/images/placeholder-news.svg" alt="Platzhalter für Neuigkeiten ohne Bild">
                                                     </figure>
                                                     <figcaption class="bordered no-top-border addon">
                                                         <div class="info">
