Add Login and Admin page for news

--- a/TTV48Schmalkalden/Views/Error.cshtml
+++ b/TTV48Schmalkalden/Views/Error.cshtml
@@ -1,9 +1,9 @@
 ﻿@model ErrorViewModel
 @{
-    ViewData["Title"] = "Error";
+    ViewData["Title"] = "Fehler";
 }
 
-<h1 class="text-danger">Error.</h1>
+<h1 class="text-danger">Fehler.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
 
 @if (Model.ShowRequestId)
