--- a/TTV48Schmalkalden/Views/Shared/_Layout.cshtml
+++ b/TTV48Schmalkalden/Views/Shared/_Layout.cshtml
@@ -4,21 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta name="description" content="Tischtennis spielen in der Heimat! Wir heißen Sie recht herzlich im Schmalkaldener Verein TTV 40 Schmalkalden willkommen &#10084. Hier finden Sie Informationen rund um uns und unseren Sport. Viel Spaß beim Stöbern!">
-    <meta name="keywords" content="Tischtennis, Schmalkalden, Sport, Verein, Freizeit">
-    <meta name="author" content="Dominik Weder">
-    @if (ViewBag.Title.Equals("Datenschutzerklärung") || ViewBag.Title.Equals("Kontakt"))
-    {
-        <meta name="robots" content="index,follow" />
-    }
-    else
-    {
-        <meta name="robots" content="noindex,follow" />
-    }
-
-    <meta http-equiv="language" content="DE">
-
     <title>TTV 48 Schmalkalden - @ViewBag.Title</title>
+    <meta name="description" content="Tischtennis in Schmalkalden! Wir heißen Sie recht herzlich im Tischtennisverein TTV 48 Schmalkalden willkommen &#10084. Hier finden Sie Informationen rund um uns und unsere Ballsportart. Viel Spaß beim Stöbern!">
+    <meta name="keywords" content="Tischtennis, Schmalkalden, Sport, Verein, Freizeit, Spaß">
+    <meta name="author" content="Dominik Weder">
+    <meta name="robots" content="index,follow" />
+    <meta http-equiv="language" content="DE">
 
     <!-- Core CSS -->
     <link href="~/assets/css/bootstrap.min.css" rel="stylesheet">
@@ -71,4 +62,4 @@
     <script src="~/assets/js/scripts.js"></script>
     <script src="~/assets/js/custom.js"></script>
 </body>
-</html >
+</html>
