--- a/TTV48Schmalkalden/Views/Home/Index.cshtml
+++ b/TTV48Schmalkalden/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TTV48Schmalkalden.Models.NewsOverviewViewModel
 @{
-    ViewData["Title"] = "Home";
+    ViewData["Title"] = "Tischtennis";
 }
 
 <!-- ============================================================= HEADER : END ============================================================= -->
@@ -15,7 +15,7 @@
             <div class="row">
 
                 <div class="col-lg-4 inner-right-xs inner-bottom-xs">
-                    <h2>Wir heißen Sie rechtherzlich auf unserer offiziellen Vereinswebsite willkommen</h2>
+                    <h2 class="headline">Wir heißen Sie rechtherzlich auf unserer offiziellen Vereinswebsite willkommen</h2>
                 </div><!-- /.col -->
 
                 <div class="col-lg-4 inner-right-xs inner-bottom-xs">
