--- a/TTV48Schmalkalden/Views/Shared/_Layout.cshtml
+++ b/TTV48Schmalkalden/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/images/drawing.ico">
+    <link href="https://cdn.rawgit.com/davidstutz/bootstrap-multiselect/master/dist/css/bootstrap-multiselect.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/chosen-js@1.8.7/chosen.css" rel="stylesheet" />
+    <link href="~/assets/css/custom.css" rel="stylesheet" />
 </head>
 <body id="top">
 
@@ -61,5 +64,7 @@
     <script src="~/assets/js/selected-scroll.js"></script>
     <script src="~/assets/js/scripts.js"></script>
     <script src="~/assets/js/custom.js"></script>
+    <script src="https://cdn.rawgit.com/davidstutz/bootstrap-multiselect/master/dist/js/bootstrap-multiselect.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chosen-js@1.8.7/chosen.jquery.js" type="text/javascript"></script>
 </body>
 </html>
