--- a/TTV48Schmalkalden/wwwroot/assets/css/custom.css
+++ b/TTV48Schmalkalden/wwwroot/assets/css/custom.css
@@ -5,3 +5,7 @@
 /*===================================================================================*/
 
 /* Insert your own styles in here! */
+
+.textarealong {
+    height: 400px!important;
+}
