--- a/TTV48Schmalkalden/Views/Admin/Index.cshtml
+++ b/TTV48Schmalkalden/Views/Admin/Index.cshtml
@@ -6,7 +6,7 @@
     <div class="container inner-top-sm inner-bottom">
         <div class="comment-form-wrapper">
             <div>
-                <a asp-controller="Admin" asp-action="Edit" asp-route-id="0" class="btn btn-large" style="width:100%;">Neu erstellen</a>
+                <a asp-controller="Admin" asp-action="Create" class="btn btn-large" style="width:100%;">Neu erstellen</a>
             </div>
             <table class="table table-bordered">
                 <thead class="thead-dark">
