--- a/TTV48Schmalkalden/Views/News/Detail.cshtml
+++ b/TTV48Schmalkalden/Views/News/Detail.cshtml
@@ -22,7 +22,7 @@
                         </div><!-- /.date-wrapper -->
 
                         <div class="post-content">
-                            <p class="author"><a href="" title="Post author" data-rel="tooltip" data-placement="left">@Model.NewsViewModel.Author</a></p>
+                            <p class="author"><a class="text-small" style="font-size:13px;" href="" title="Post author" data-rel="tooltip" data-placement="left">@Model.NewsViewModel.Author</a></p>
 
                             <h1 class="post-title">@Model.NewsViewModel.Title</h1>
 
