Handle Error Pages with different status code

--- a/TTV48Schmalkalden/Views/Error/PageNotFound.cshtml
+++ b/TTV48Schmalkalden/Views/Error/PageNotFound.cshtml
@@ -1,6 +1,5 @@
-﻿@model ErrorViewModel
-@{
-    ViewData["Title"] = "Error";
+﻿@{
+    ViewData["Title"] = "Fehler";
 }
 
 <section class="light-bg">
@@ -11,11 +10,9 @@
                     <h1>
                         Oops!
                     </h1>
-                    <h2>
-                        404 Not Found
-                    </h2>
+                    <h2>Da ist wohl etwas schief gelaufen.</h2>
                     <div class="error-details">
-                        Sorry, es ist ein Fehler aufgetreten, die angeforderte Seite wurde nicht gefunden!
+                        Wir können die von Ihnen aufgerufene Webiste nicht finden.
                     </div>
                     <div class="error-actions">
                         <a asp-controller="Home" asp-action="Index" class="btn btn-primary btn-lg">
