Fix missspellings and error site in production mode

--- a/TTV48Schmalkalden/Views/Error/PageNotFound.cshtml
+++ b/TTV48Schmalkalden/Views/Error/PageNotFound.cshtml
@@ -12,7 +12,7 @@
                     </h1>
                     <h2>Da ist wohl etwas schief gelaufen.</h2>
                     <div class="error-details">
-                        Wir können die von Ihnen aufgerufene Webiste nicht finden.
+                        Wir können die von Ihnen aufgerufene Website nicht finden.
                     </div>
                     <div class="error-actions">
                         <a asp-controller="Home" asp-action="Index" class="btn btn-primary btn-lg">
